add config add isomorphic ws EventEmitter event now has a white list of objects to include remove old test script add test script into backbone.ts _this should be moved_

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^10.11.3"
+    "@types/node": "^10.11.3",
+    "config": "^2.0.1",
+    "isomorphic-ws": "^4.0.1"
   }
 }
