--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/node": "^10.11.3",
     "config": "^2.0.1",
+    "express": "^4.16.4",
     "isomorphic-ws": "^4.0.1"
   }
 }
