--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^10.11.3",
     "config": "^2.0.1",
     "express": "^4.16.4",
-    "isomorphic-ws": "^4.0.1"
+    "isomorphic-ws": "^4.0.1",
+    "ws": "^6.1.0"
   }
 }
