--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "config": "^2.0.1",
     "express": "^4.16.4",
     "isomorphic-ws": "^4.0.1",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "uuid": "^3.3.2",
     "ws": "^6.1.0"
   }
