--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/node": "^10.11.3",
     "config": "^2.0.1",
+    "events": "^3.0.0",
     "express": "^4.16.4",
     "isomorphic-ws": "^4.0.1",
     "request": "^2.88.0",
