--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pm2": "^3.2.2",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "typescript": "^3.3.3333",
     "uuid": "^3.3.2",
     "ws": "^6.1.0"
   }
